tests/fails/10.mat
scalar a
vector a[2]